--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ button {
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
-    max-width: 600px;
+    max-width: 800px;
     padding: 10px;
     margin: auto;
     background-color: #a1bdb4;
@@ -33,17 +33,21 @@ button {
 
 .player-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 180px;
+    border: 2px solid #54549E;
+    border-radius: 10px;
 }
 
 .computer-box {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 180px;
+    border: 2px solid #54549E;
+    border-radius: 10px;
 }
 
 .computer-icon {
