--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,26 @@ h2 {
 button {
     background-color: #9EB2D6;
     margin: 6px;
+    border-radius: 5px;
+}
+
+button:hover {
+    border: 2px solid #54549E;
+    transform: scale(1.05);
+}
+
+.disabled {
+    pointer-events: none;
+}
+
+.winner {
+    border: 2px solid green;
+    transform: scale(1.2);
+}
+
+.looser {
+    border: 2px solid red;
+    transform: scale(1.2);
 }
 
 .container {
@@ -24,18 +44,19 @@ button {
     justify-content: space-between;
     margin-top: 40px;
     max-width: 800px;
-    padding: 10px;
+    padding: 25px;
     margin: auto;
     background-color: #a1bdb4;
     color: #131322;
     font-size: large;
+    border-radius: 10px;
 }
 
 .player-box {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 180px;
+    width: 200px;
     border: 2px solid #54549E;
     border-radius: 10px;
 }
@@ -45,7 +66,8 @@ button {
     flex-direction: row-reverse;
     justify-content: space-around;
     align-items: center;
-    width: 180px;
+    width: 200px;
+    height: 270px;
     border: 2px solid #54549E;
     border-radius: 10px;
 }
@@ -74,10 +96,10 @@ button {
     transform: rotateY(180deg);
 }
 
-/* test {
+test {
     color: #BBD9D0;
     color: #4F6961;
     color: #465F8D;
     color: #54549E;
     color: #131322;
-} */
+}
